turtleart.triangle.Triangle.scala.error
Compilation error:
Triangle:7: error: ')' expected but '}' found.
} 
^